--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -337,14 +337,28 @@
     -fx-background-radius: 0;
 }
 
-#freeTimeTags {
+#tags {
     -fx-hgap: 7;
     -fx-vgap: 3;
 }
 
-#freeTimeTags .label {
+#tags .label {
     -fx-text-fill: white;
     -fx-background-color: #3e7b91;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 11;
+}
+
+#dormTag {
+    -fx-hgap: 7;
+    -fx-vgap: 3;
+}
+
+#dormTag .label {
+    -fx-text-fill: white;
+    -fx-background-color: #ff0000;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
