--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -27,7 +27,8 @@
         </Label>
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
       </HBox>
-      <FlowPane fx:id="freeTimeTags" />
+      <FlowPane fx:id="dormTag" />
+      <FlowPane fx:id="tags" />
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
       <Label fx:id="roomNumber" styleClass="cell_small_label" text="\$roomNumber" />
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
